--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
+dist: xenial
 language: python
 
 python:
-  - '2.7'
-  - '3.4'
-  - '3.5'
   - '3.6'
   - '3.7'
+  - '3.8'
 
 install:
-  - pip install -e .
-  - pip install -r requirements-dev.txt
+  - pip install -e . -r requirements-dev.txt
 
 script:
-  - py.test
-  - pylint -E pycodegraph
+  - black --check .
+  - pylint --errors-only pycodegraph
+  - pytest
 
 sudo: false
