--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - '3.8'
 
 install:
-  - pip install -e . -r requirements-dev.txt
+  - pip install . -r requirements-dev.txt
 
 script:
   - black --check .
