--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
+branches:
+  - master
+
 dist: xenial
+sudo: false
 language: python
+cache:
+  pip: true
 
 python:
-  - '3.6'
-  - '3.7'
   - '3.8'
+  - '3.7'
+  - '3.6'
+  - '3.5'
+install: pip install -e . --upgrade pytest
+script: pytest
 
-install:
-  - pip install . -r requirements-dev.txt
+jobs:
+  include:
+    - name: black
+      install: pip install --upgrade black
+      script: black --check .
 
-script:
-  - black --check .
-  - pylint --errors-only pycodegraph
-  - pytest
-
-sudo: false
+    - name: pylint
+      install: pip install -e . --upgrade pylint
+      script: pylint -E pycodegraph
